crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__method__empty_block.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/method/empty_block.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class Foo (global @3) ∅
      (method bar [(local this @0)] []
         (block)))
   (print (call +4 (attr (call +4 (global Foo @3)) bar))))

----- stderr -----
