crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__method__missing_arguments.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/method/missing_arguments.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class Foo (global @1) ∅
      (method method [(local this @0) (local a @1) (local b @2)] []
         (block)))
   (expr (call +2 (attr (call +2 (global Foo @1)) method) 1.0)))

----- stderr -----
