crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__method__refer_to_name.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/method/refer_to_name.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class Foo (global @3) ∅
      (method method [(local this @0)] []
         (block
            (print (global-by-name method)))))
   (expr (call +4 (attr (call +4 (global Foo @3)) method))))

----- stderr -----
